@@ -9,6 +9,9 @@ import com.seed.emptyClients.core.ObjectMappers;
 import com.seed.emptyClients.core.Stream;
 import java.io.IOException;
 import java.io.StringReader;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -17,8 +20,9 @@ import org.junit.jupiter.api.Test;
 public final class StreamTest {
     @Test
     public void testJsonStream() {
-        List<Map> messages = List.of(Map.of("message", "hello"), Map.of("message", "world"));
-        List jsonStrings = messages.stream().map(StreamTest::mapToJson).collect(Collectors.toList());
+        List<Map<String, String>> messages =
+                Arrays.asList(createMap("message", "hello"), createMap("message", "world"));
+        List<String> jsonStrings = messages.stream().map(StreamTest::mapToJson).collect(Collectors.toList());
         String input = String.join("\n", jsonStrings);
         StringReader jsonInput = new StringReader(input);
         Stream<Map> jsonStream = Stream.fromJson(Map.class, jsonInput);
@@ -33,8 +37,8 @@ public final class StreamTest {
 
     @Test
     public void testSseStream() {
-        List<Map> events = List.of(Map.of("event", "start"), Map.of("event", "end"));
-        List sseStrings = events.stream().map(StreamTest::mapToSse).collect(Collectors.toList());
+        List<Map<String, String>> events = Arrays.asList(createMap("event", "start"), createMap("event", "end"));
+        List<String> sseStrings = events.stream().map(StreamTest::mapToSse).collect(Collectors.toList());
         String input = String.join("\n" + "\n", sseStrings);
         StringReader sseInput = new StringReader(input);
         Stream<Map> sseStream = Stream.fromSse(Map.class, sseInput);
@@ -49,8 +53,9 @@ public final class StreamTest {
 
     @Test
     public void testSseStreamWithTerminator() {
-        List<Map> events = List.of(Map.of("message", "first"), Map.of("message", "second"));
-        List sseStrings = events.stream().map(StreamTest::mapToSse).collect(Collectors.toList());
+        List<Map<String, String>> events = Arrays.asList(createMap("message", "first"), createMap("message", "second"));
+        List<String> sseStrings =
+                new ArrayList<>(events.stream().map(StreamTest::mapToSse).collect(Collectors.toList()));
         sseStrings.add("data: [DONE]");
         String input = String.join("\n" + "\n", sseStrings);
         StringReader sseInput = new StringReader(input);
@@ -82,5 +87,11 @@ public final class StreamTest {
 
     private static String mapToSse(Map map) {
         return "data: " + mapToJson(map);
+    }
+
+    private static Map<String, String> createMap(String key, String value) {
+        Map<String, String> map = new HashMap<>();
+        map.put(key, value);
+        return map;
     }
 }
